# MGARD

./: .#makefile_2  .doxygen  .doxygen.in  .gitignore  .travis.yml  A short introduction to compression with MGARD .html  CMakeLists.txt  Copyright.txt  INSTALL_MGARD_GPU.md  LICENSE  Makefile  README  README.md  README_MGARD_GPU.md  bootstrap.sh  build_mgard_cuda.sh  build_mgard_hip.sh  build_mgard_serial.sh  clang-format.sh  cmgard  makefile  mgard-config.cmake.in  mgard.pc.in  mgard_test.c  test.py  test.sh
cuda_test/adios-mgard-refactoring-vtkh/: CMakeLists.txt  FindVTKh.cmake  submit1.sh  submit1024.sh  submit128.sh  submit16.sh  submit2.sh  test.cxx
doc/: .doxygen.in  CMakeLists.txt  MDR-X.md  MGARD-CPU.md  MGARD-GPU.md  MGARD-Lambda.md  MGARD-QoI.md  MGARD-RoI.md  MGARD-X.md  MGARD-format.md
examples/ADIOS2/: CMakeLists.txt  adios2-test-external-compressor.cpp  adios2-test.cpp  build_script.sh  run_script.sh
examples/gpu-cuda/CompressXgcData/: CMakeLists.txt  build_script.sh
examples/gpu-cuda/FlyingEdges/: CMakeLists.txt  FlyingEdges.cu  FlyingEdges.hpp  build_script.sh
examples/lambda/: CMakeLists.txt  KmeansMPI.cpp  KmeansMPI.h  LagrangeOptimizer.cpp  LagrangeOptimizer.hpp  README.md  TestXGCDecompress.cpp  TestXGCPostProcessing.cpp  build_script.sh
examples/linking/: CMakeLists.txt  README.md
examples/linking/src/: main.cpp
examples/mgard-x/AdaptiveResolution/: CMakeLists.txt  FlyingEdges.hpp  FlyingEdgesBatched.hpp  SparseFlyingCells.hpp  SparseFlyingEdges.hpp  TestAdaptiveResolution.cu  TestFlyingEdges.cu  adaptive_resolution_config.txt  build_script.sh  draw_adaptive_resolution.py
examples/qoi/: CMakeLists.txt  README.md  average.cpp  build_script.sh  run_script.sh
examples/roi/: CMakeLists.txt  README.md  build_script.sh  mgard_roi.cpp  run_script.sh
examples/xgc-casestudy/: CMakeLists.txt  CalcSnormDensity.cpp  README.md  TestXGC4DNonuniform.cpp  TestXGC5DTemporal.cpp  TestXGCBasic.cpp  TestXGCDensity.cpp  cmd.txt  qoi_evaluate.py
examples/xgc-casestudy/cmake/: FindZSTD.cmake
examples/xgc-casestudy/xgc4py/: XGC.py  __init__.py
include/mgard-x/: CMakeLists.txt  CompressionWorkflow.h  CompressionWorkflow.hpp  Handle.h  Handle.hpp  Hierarchy.h  Hierarchy.hpp  HighLevelAPI.h  HighLevelAPI.hpp  Metadata.hpp  Types.h
include/mgard-x/CompressionHighLevel/: Metadata.hpp  (+8 more)
progressive_tests/: CMakeLists.txt  test_reconstructor.cpp  test_refactor.cpp
src/benchmarks/: CMakeLists.txt  tensor.cpp  unstructured.cpp
src/cli/: CMakeLists.txt  arguments.cpp  cli_internal.cpp  cmdline.cpp  executable.cpp  output.cpp
src/cuda/: ._mgard_cuda_handle.cu  ._mgard_cuda_linear_quantize.cu  ._mgard_cuda_postp_2d.cu  ._mgard_cuda_postp_3d.cu  ._mgard_cuda_prep_2d.cu  ._mgard_cuda_prep_3d.cu  ._mgard_cuda_recompose_2d.cu  ._mgard_cuda_recompose_3d.cu  ._mgard_cuda_refactor_2d.cu  ._mgard_cuda_refactor_3d.cu  API.cu  Array.cu  CMakeLists.txt  CommonInternal.cu  CompressionWorkflow.cu  DataRefactoring.cu  DataRefactoring_AMR.cu  ErrorCalculator.cu  Handle.cu  LosslessCompression.cu  MemoryManagement.cu  Message.cpp  Metadata.cpp  MgardCudaExec.cpp  MgardSerialExec.cpp  PrecomputeKernels.cu  SubArray.cu  TestDouble.cpp  TestDoubleAbsoluteError.cpp  TestDoubleRelativeError.cpp  TestFloat.cpp  TestFloatAbsoluteError.cpp  TestFloatRelativeError.cpp  mgard_api_cuda.cu  mgard_check_cuda.cpp  mgard_check_cuda_and_cpu.cpp  mgard_cuda.cu  mgard_cuda_add_level.cu  mgard_cuda_api.cu  mgard_cuda_assign_num_level.cu  (+29 more)
src/mgard-x/: CMakeLists.txt  LosslessCompression.cu  PrecomputeKernels.cu
src/unstructured/: CMakeLists.txt  EnumeratedMeshRange.cpp  IndicatorInput.cpp  LinearOperator.cpp  MassMatrix.cpp  MeshHierarchy.cpp  MeshLevel.cpp  MeshRefiner.cpp  UniformMeshHierarchy.cpp  UniformMeshRefiner.cpp  UniformRestriction.cpp  estimators.cpp  indicators.cpp  measure.cpp  norms.cpp  pcg.cpp
tests/: CMakeLists.txt
tests/constant1d/: CMakeLists.txt  constant1d.cpp
tests/constant3d/: CMakeLists.txt  constant3d.cpp
tests/cosine/: CMakeLists.txt  cosine.cpp
tests/cosine1d/: CMakeLists.txt  cosine1d.cpp
tests/dim2kplus1/: CMakeLists.txt  dim2kplus1.cpp
tests/gpu-cuda/: CMakeLists.txt  SimpleExample.cpp  TestDouble.cpp  TestDoubleAbsoluteError.cpp  TestDoubleRelativeError.cpp  TestFloat.cpp  TestFloatAbsoluteError.cpp  TestFloatRelativeError.cpp  TestXGCAbsoluteError.cpp  build_example.sh  mgard_check_cuda_and_cpu.cpp  mgard_cuda_double_test.cpp
tests/gray-scott/: CMakeLists.txt  README.md  adios2.xml
tests/include/: compressors_regression.hpp  huffman_regression.hpp  test_measure.hpp  test_utilities.hpp  testing_paths.hpp.in  testing_random.hpp  testing_random.tpp  testing_utilities.hpp  testing_utilities.tpp  tests.hpp  tests.tpp
tests/meshes/: circle.msh  hexahedron.msh  lopsided.msh  pyramid.msh  seated.msh  slope.msh  tetrahedron.msh  triangle.msh
tests/outputs/: circle_L=2_coefficients.txt
tests/simple1d/: CMakeLists.txt  simple1d.cpp
tests/src/: compressors_regression.cpp  huffman_regression.cpp  lossless_regression.cpp  main.cpp  test_CompressedDataset.cpp  test_EnumeratedMeshRange.cpp  test_IndicatorInput.cpp  test_LinearOperator.cpp  test_LinearQuantizer.cpp  test_MassMatrix.cpp  test_MeshHierarchy.cpp  test_MeshLevel.cpp  test_MeshRefiner.cpp  test_MultidimensionalArray.cpp  test_MultilevelCoefficientQuantizer.cpp  test_Quantizer.cpp  test_SituatedCoefficientRange.cpp  test_TensorLinearOperator.cpp  test_TensorMassMatrix.cpp  test_TensorMeshHierarchy.cpp  test_TensorMeshHierarchyIteration.cpp  test_TensorMeshLevel.cpp  test_TensorMultilevelCoefficientQuantizer.cpp  test_TensorNorms.cpp  test_TensorProlongation.cpp  test_TensorQuantityOfInterest.cpp  test_TensorRestriction.cpp  test_UniformEdgeFamilies.cpp  test_UniformMeshHierarchy.cpp  test_UniformMeshRefiner.cpp  test_UniformRestriction.cpp  test_blas.cpp  test_compress.cpp  test_compressors.cpp  test_data.cpp  test_decompose.cpp  test_estimators.cpp  test_format.cpp  test_huffman.cpp  test_indicators.cpp  (+12 more)
tests/test_1d/: CMakeLists.txt  test_1d.cpp
tests/test_s/: CMakeLists.txt  test_s.cpp
(+184746 files in other folders)
